--- a/.github/workflows/trufflehog.yaml
+++ b/.github/workflows/trufflehog.yaml
@@ -21,6 +21,7 @@ jobs:
       - name: Trunk Check
         uses: trunk-io/trunk-action@v1
         with:
+          debug: true
           post-init: $TRUNK_PATH check enable trufflehog
           arguments: --filter=trufflehog
         env:
