--- a/.github/workflows/trufflehog.yaml
+++ b/.github/workflows/trufflehog.yaml
@@ -56,10 +56,6 @@ jobs:
 
       - name: Trunk Check
         uses: trunk-io/trunk-action@v1
-        with:
-          debug: true
-          post-init: $TRUNK_PATH check enable trufflehog
-          arguments: --filter=trufflehog
         env:
-          TRUNK_GITHUB_CHECK_RUN_TITLE: Trunk Check (trufflehog)
+          TRUNK_GITHUB_CHECK_RUN_TITLE: Trunk Check (trufflehog2)
 
