--- a/.github/workflows/trufflehog.yaml
+++ b/.github/workflows/trufflehog.yaml
@@ -39,6 +39,7 @@ jobs:
         uses: actions/checkout@v3
       
       - run: |
+          mkdir -p .trunk
           echo >.trunk/trunk.yaml <<EOF
           cli:
             version: 1.13.0
