--- a/.github/workflows/trufflehog.yaml
+++ b/.github/workflows/trufflehog.yaml
@@ -57,6 +57,8 @@ jobs:
 
       - name: Trunk Check
         uses: trunk-io/trunk-action@v1
+        with:
+          debug: true
         env:
           TRUNK_GITHUB_CHECK_RUN_TITLE: Trunk Check (trufflehog2)
 
