--- a/.github/workflows/trufflehog.yaml
+++ b/.github/workflows/trufflehog.yaml
@@ -40,7 +40,7 @@ jobs:
       
       - run: |
           mkdir -p .trunk
-          echo  <<EOF >.trunk/trunk.yaml
+          cat  <<EOF >.trunk/trunk.yaml
           cli:
             version: 1.13.0
             
